syntax = "proto3";
package tutorial;
option java_package = "com.classlink.websocket.api.member.domain.dto.proto";
option java_outer_classname = "Identity";

message IdentityData {
  int32 ResultCode = 1;
  string Message = 2;
  repeated string IdtName = 3;
}